--- a/2020_Sienna_schedule_rules.yaml
+++ b/2020_Sienna_schedule_rules.yaml
@@ -30,8 +30,8 @@ rules:
   - key: transmission_fluid
     label: "Transmission Fluid Drain & Fill"
     match: ["transmission fluid", "trans fluid", "atf", "trans flush", "drain & fill", "drain and fill"]
-    miles_interval: 50000
-    months_interval: 60
+    miles_interval: 60000
+    months_interval: 72
     trigger: earliest
     # Baseline: in-service date
     baseline_date: "07/30/2020"
@@ -69,7 +69,7 @@ rules:
     note: "First at 100k/120mo; some prefer ~60k/5y."
 
   - key: coolant_subsequent
-    label: "Coolant Change (Subsequent)"
+    label: "Coolant Change"
     match: ["coolant", "antifreeze", "engine coolant", "coolant flush"]
     miles_interval: 50000
     months_interval: 60
@@ -79,7 +79,7 @@ rules:
   - key: spark_plugs
     label: "Spark Plug Replacement"
     match: ["spark plug", "spark plugs"]
-    miles_interval: 120000
+    miles_interval: 60000
     months_interval: 144
     trigger: mileage_only
     note: "Iridium ~120k; check earlier if misfire/rough idle."
